--- a/LiveLib/#source/scss/style.scss
+++ b/LiveLib/#source/scss/style.scss
@@ -16,55 +16,57 @@ body {
 
 // --------------------------------------------------------------------------------------------------------------- //
 header {
-    width: calc(1400px + 1vw);
-    height: calc(100px + 0.5vw);
-    padding: 0 4%;
+    width: calc(90% + 1vw);
+    height: calc(10% + 0.5vw);
     margin: 2% 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    border: 1px solid #fff;
 }
 
+.logo__a{
+    width: 8%;
+    height: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
 .logo { 
-    width: calc(60px + 0.5vw);
-    height: calc(60px + 0.5vw);
+    width: 65%;
+    height: 80%;
 }
 
 .div__search {
-    width: calc(300px + 2vw);
-    height: calc(50px + 0.8vw);
+    width: calc(22% + 2vw);
+    height: calc(60% + 0.8vw);
     margin-right: 10%;
     display: flex;
     align-items: center;
 
     .search__btn {
         margin-left: 3px;
-        max-width: 30%; max-height: 70%;
-        min-width: 10%; min-height: 50%;
+        width: 13%; height: 2em;
         border-radius: 0 10px 10px 0;
         border: 2px solid #555555;
-        background-image: url("/images/magnifier.png");
+        background-image: url("images/magnifier.png");
 
         .search__btn__img {
             padding: 2px 0;
-            margin: 0 20px 0 5px;
-            width: 33px; height: 33px;
+            width: 50%; height: 90%;
         }
     }
 
     .search__input {
-        max-width: 100%; max-height: 70%;
-        min-width: 50%; min-height: 50%;
+        width: 100%;
+        padding-left: 4px;
         border: 2px solid #555555;
         border-radius: 10px 0 0 10px;
-        font-size: 28px;
+        font-size: 1.35em;
     }
 }
 
 .navigation {
-    border: 1px solid #fff;
-    width: calc(650px + 1vw);
+    width: 50%;
 
     .header__a {
         position: relative;
@@ -72,7 +74,7 @@ header {
         font-size: 20px;
         color: #fff;
         font-weight: 600;
-        margin-left: 3%;
+        margin-right: 2%;
     }
     .header__a::after {
         content: '';
@@ -91,11 +93,10 @@ header {
     }
     .navigation__btn {
         border: 2px solid #fff;
-        width: 90px; height: 40px;
+        width: 12%; height: 100%;
         background: transparent;
         border-radius: 10px;
         font-size: 20px;
-        margin-left: 30px;
         color: #fff;
         font-weight: 600;
         transition: 1s;
@@ -107,15 +108,21 @@ header {
 }
 
 .new__books {
-    width: calc(1400px + 1vw);
-    height: calc(600px + 2vw);
-    border: 1px solid #fff;
+    width: calc(90% + 1vw);
+    height: calc(70% + 2vw);
+
+    .new__books__p {
+        font-size: 48px;
+        font-weight: 700;
+        margin: 0 3%;
+    }
 
     .book {
         width: 20%;
-        height: 85%;
-        margin: 4%;
-        border: 1px solid #fff;
+        max-width: 30%;
+        height: 80%;
+        margin: 2% 3%;
+        border: 2px solid #555555;
         border-radius: 20px;
         display: flex;
         flex-wrap: wrap;
@@ -123,26 +130,31 @@ header {
         text-align: center;
 
         .book__img {
-            width: 100%;
-            height: 75%;
-            border-radius: 20px 20px 0 0 ;
+            width: 90%;
+            height: 70%;
+            padding: 5px;
+            border-radius: 20px;
         }
         .book__name {
-            width: 100%;
             font-size: 24px;
         }
         .book__author {
-            width: 100%;
             font-style: italic;
             font-size: 18px;
         }
         .book__add_btn {
-            width: 65%; height: 5%;
+            width: 60%; height: 8%;
             border-radius: 20px;
             background-color: rgb(0, 185, 255);
             color: #fff;
             font-size: 20px;
             font-weight: 700;
+            transition: ease-in 0.3s;
+        }
+        .book__add_btn:hover {
+            border: 1px solid #fff;
+            background-color: rgb(0, 135, 180);
+            transition: 0.3s;
         }
     }
 }
