--- a/LiveLib/#source/scss/style.scss
+++ b/LiveLib/#source/scss/style.scss
@@ -45,8 +45,7 @@ header {
 
     .search__btn {
         margin-left: 3px;
-        width: 13%; height: 2em;
-        border-radius: 0 10px 10px 0;
+        width: 10%; height: 2em;
         border: 2px solid #555555;
         background-image: url("images/magnifier.png");
 
@@ -55,26 +54,29 @@ header {
             width: 50%; height: 90%;
         }
     }
-
+    .search__btn:hover {
+        border: 2px solid #fff;
+    }
     .search__input {
         width: 100%;
         padding-left: 4px;
         border: 2px solid #555555;
-        border-radius: 10px 0 0 10px;
-        font-size: 1.35em;
+        font-size: 1.3em;
     }
 }
 
 .navigation {
-    width: 50%;
+    width: 45vh;
+    font-size: 1.2em;
 
     .header__a {
         position: relative;
         text-decoration: none;
-        font-size: 20px;
         color: #fff;
         font-weight: 600;
-        margin-right: 2%;
+    }
+    .header__a:nth-child(-n+4) {
+        margin-right: 3%;
     }
     .header__a::after {
         content: '';
@@ -91,70 +93,93 @@ header {
     .header__a:hover::after {
         transform: scaleX(1);
     }
-    .navigation__btn {
-        border: 2px solid #fff;
-        width: 12%; height: 100%;
-        background: transparent;
-        border-radius: 10px;
-        font-size: 20px;
-        color: #fff;
-        font-weight: 600;
-        transition: 1s;
-    }
-    .navigation__btn:hover {
-        background: #fff;
-        color: #000;
-    }
+}
+
+.navigation__btn {
+    border: 2px solid #fff;
+    background: transparent;
+    padding: 3px 7px;
+    border-radius: 10px;
+    font-size: 1.25em;
+    color: #fff;
+    font-weight: 600;
+    transition: 1s;
+}
+.navigation__btn:hover {
+    background: #fff;
+    color: #000;
 }
 
 .new__books {
     width: calc(90% + 1vw);
-    height: calc(70% + 2vw);
+    margin-bottom: 3%;
+    height: max-content;
+    display: inline-block;
+    border: 1px solid #fff;
 
     .new__books__p {
-        font-size: 48px;
+        font-size: 36px;
         font-weight: 700;
         margin: 0 3%;
     }
 
-    .book {
-        width: 20%;
-        max-width: 30%;
-        height: 80%;
-        margin: 2% 3%;
-        border: 2px solid #555555;
-        border-radius: 20px;
-        display: flex;
+    .books {
+        display: inline-flex;
+        justify-content: space-around;
         flex-wrap: wrap;
-        justify-content: center;
-        text-align: center;
+        width: 100%;
+        padding: 2% 1%;
 
-        .book__img {
-            width: 90%;
-            height: 70%;
-            padding: 5px;
+        .book {
+            flex: 15%;
+            width: 10%;
+            max-width: 15%;
+            border: 2px solid #555555;
             border-radius: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            text-align: center;
+    
+            .book__img {
+                width: 90%;
+                height: 75%;
+                padding: 5px;
+                border-radius: 20px;
+            }
+            .book__name {
+                font-size: 18px;
+            }
+            .book__author {
+                font-style: italic;
+                font-size: 14px;
+                width: 100%;
+            }
+            .book__add_btn {
+                width: 40%; height: 6%;
+                border-radius: 20px;
+                background-color: rgb(0, 185, 255);
+                color: #fff;
+                font-size: 18px;
+                font-weight: 700;
+                transition: ease-in 0.3s;
+            }
+            .book__add_btn:hover {
+                background-color: rgb(0, 135, 180);
+                transition: 0.3s;
+            }
         }
-        .book__name {
-            font-size: 24px;
-        }
-        .book__author {
-            font-style: italic;
-            font-size: 18px;
-        }
-        .book__add_btn {
-            width: 60%; height: 8%;
-            border-radius: 20px;
-            background-color: rgb(0, 185, 255);
-            color: #fff;
-            font-size: 20px;
-            font-weight: 700;
-            transition: ease-in 0.3s;
-        }
-        .book__add_btn:hover {
-            border: 1px solid #fff;
-            background-color: rgb(0, 135, 180);
-            transition: 0.3s;
-        }
+    }
+}
+
+.newsline {
+    width: calc(90% + 1vw);
+    height: 400px;
+    border: 1px solid #fff;
+
+    .newsline__p {
+        font-size: 36px;
+        font-weight: 700;
+        margin: 0 3%;
     }
 }
