--- a/LiveLib/#source/scss/style.scss
+++ b/LiveLib/#source/scss/style.scss
@@ -2,6 +2,8 @@
 
 // Файл обнуляющих стилей
 @import "nullstyle.scss";
+// Файл стилей для формы регистрации
+@import "login_form_style.scss";
 
 * { box-sizing: border-box; margin: 0; padding: 0; font-family: "Zilla Slab"; }
 
@@ -59,6 +61,7 @@ header {
     }
     .search__input {
         width: 100%;
+        height: 1.5em;
         padding-left: 4px;
         border: 2px solid #555555;
         font-size: 1.3em;
@@ -110,18 +113,32 @@ header {
     color: #000;
 }
 
+.p__title_sections {
+    font-size: 36px;
+    font-weight: 700;
+    margin: 0 3%;
+}
+.block_name {
+    margin-top: 1%;
+    font-size: 28px;
+    font-weight: 700;
+}
+.block_date {
+    margin-top: 1%;
+    font-size: 16px;
+    font-style: italic;
+}
+.block_author {
+    margin: 1% 0;
+    font-size: 20px;
+    font-weight: 600;
+}
+
 .new__books {
     width: calc(90% + 1vw);
     margin-bottom: 3%;
     height: max-content;
     display: inline-block;
-    border: 1px solid #fff;
-
-    .new__books__p {
-        font-size: 36px;
-        font-weight: 700;
-        margin: 0 3%;
-    }
 
     .books {
         display: inline-flex;
@@ -174,12 +191,199 @@ header {
 
 .newsline {
     width: calc(90% + 1vw);
-    height: 400px;
-    border: 1px solid #fff;
+    height: max-content;
 
-    .newsline__p {
-        font-size: 36px;
-        font-weight: 700;
-        margin: 0 3%;
+    .news_shell {
+        width: 100%;
+        height: max-content;
+        display: inline-flex;
+        justify-content: center;
+        margin-bottom: 2%;
+
+        .news {
+            margin-top: 2%;
+            width: 94%;
+            display: inline-flex;
+
+            .news__main_new {
+                width: 70%;
+                height: 100%;
+                
+                a {
+                    color: #fff;
+                    transition: all 1s;
+                }
+
+                .img_new {
+                    width: 90%;
+                    height: 85%;
+                    border: 2px solid #555555;
+                    padding: 2%;
+                }
+                .name_new { width: 50%; }
+                .name_new:hover {
+                    border-bottom: 2px solid #fff;
+                    border-left: 2px solid #fff;
+                    transition: 1s;
+                }
+            }
+            .news__other_news {
+                width: 30%;
+                height: 100%;
+                
+                .other_new {
+                    border-bottom: 2px solid #fff;
+                    border-left: 2px solid #fff;
+                    margin-bottom: 4%;
+                    color: #fff;
+                    transition: all 1s;
+
+                    p {
+                        margin-left: 2%;
+                    }
+
+                    &:hover {
+                        transition: 1s;
+                        background-color: #505060;
+                        border-bottom: 2px solid #dddddd;
+                        border-left: 2px solid #dddddd;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.reviews {
+    width: calc(90% + 1vw);
+    height: max-content;
+
+    .reviews_shell {
+        width: 100%;
+        height: max-content;
+        display: inline-flex;
+        justify-content: center;
+        margin-bottom: 2%;
+
+        .review {
+            border: 2px solid #555555;
+            width: 30%;
+            height: 100%;
+            margin: 2% 3% 0 3%;
+            padding: 10px;
+
+            .review__book_link {
+                display: inline-block;
+                width: 100%;
+                height: calc(200px + 1vw);
+                margin: 5% 0;
+                color: #fff;
+                background: url("/LiveLib/images/news/new1.jpg") 0 / 450px 215px no-repeat;
+                filter: blur(10px);
+            }
+            .review__book_link:hover {
+                text-decoration: underline;
+            }
+
+            .rating_and_name {
+                display: flex;
+                margin-top: 1%;
+
+                .review__rating {
+                    position: relative;
+                    padding-left: 30px;
+                    font-size: 32px;
+                    font-weight: 800;
+                }
+                .review__rating::before {
+                    content: '';
+                    left: 0;
+                    position: absolute;
+                    margin-top: 7px;
+                    width: 25px; height: 25px;
+                    background: url("/LiveLib/images/icon_star.png") 0 / 25px 25px no-repeat;
+                }
+
+                .review__name {
+                    margin-left: 5%;
+                    margin-top: 2%;
+                    font-size: 24px;
+                }
+            }
+
+            .review__text {
+                margin-top: 2%;
+                margin-bottom: 2%;
+                font-size: 18px;
+                -webkit-line-clamp: 3; /* Число отображаемых строк */
+                display: -webkit-box; /* Включаем флексбоксы */
+                -webkit-box-orient: vertical; /* Вертикальная ориентация */
+                overflow: hidden; /* Обрезаем всё за пределами блока */
+            }
+            .review__read_more {
+                color: #aaa;
+                font-size: 18px;
+            }
+            .review__read_more:hover {
+                text-decoration: underline;
+            }
+        }
+
+        .review:nth-child(2) {
+            margin-left: 2%;
+            margin-right: 2%;
+        }
+    }
+}
+
+footer {
+    width: calc(85% + 1vw);
+    height: calc(12% + 0.5vw);
+    margin-top: 2%;
+
+    .footer {
+        width: auto;
+        height: 80%;
+        border-radius: 20px;
+        background-color: #30303b;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .div_for_nav {
+        display: flex;
+
+        .nav_footer:nth-child(2) {
+            margin-left: 50px;
+        }
+
+        .nav_footer {
+            li {
+                margin-bottom: 7px;
+            }
+            .footer__a {
+                position: relative;
+                text-decoration: none;
+                color: #fff;
+                font-weight: 600;
+                font-size: 16px;
+            }
+            .footer__a::after {
+                content: '';
+                position: absolute;
+                left: 0; bottom: -2px;
+                width: 100%;
+                height: 2px;
+                background: #fff;
+                border-radius: 3px;
+                transform-origin: left;
+                transform: scaleX(0);
+                transition: transform 0.5s;
+            }
+            .footer__a:hover::after {
+                transform: scaleX(1);
+            }
+        }
     }
 }
